--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb://127.0.0.1:27017/HyperMart
+MONGO_URI=mongodb+srv://rakesh2003cs_db_user:vtzJzrai6sEcJLkL@hypermart.ha910ws.mongodb.net/?appName=hypermart
 PORT=5000
 SECRET_KEY=abcdefghijkl
